--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: package-archives
+          name: package-${{ matrix.container }}-${{ matrix.ime }}
           path: artifact
 
   release:
