--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,6 +48,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+
       - name: run-builder
         shell: bash
         run: ./tools/build.sh
@@ -59,7 +60,6 @@ jobs:
           # Replace colons and slashes with dashes
           SANITIZED_CONTAINER=$(echo "${{ matrix.container }}" | sed 's/[:\\/]/-/g')
           echo "sanitized_container=$SANITIZED_CONTAINER" >> $GITHUB_OUTPUT
-
 
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
@@ -74,17 +74,22 @@ jobs:
     steps:
       - name: checkout-source
         uses: actions/checkout@v4
+
       - name: get-version
         id: get_version
         shell: bash
         run: |
           RELEASE_VERSION=$(cat version.txt | head -n1)
           echo ::set-output name=RELEASE_VERSION::$RELEASE_VERSION
+    
       - name: download-artifacts
         uses: actions/download-artifact@v4
         with:
-          name: package-archives
-          path: artifact
+          name: pkg-*
+          path: artifacts
+          pattern: pkg-*
+          merge-multiple: true
+      
       - name: create-release
         id: create_release
         uses: ncipollo/release-action@v1
@@ -92,7 +97,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ steps.get_version.outputs.RELEASE_VERSION }}
           name: ${{ steps.get_version.outputs.RELEASE_VERSION }}
-          artifacts: "artifact/*"
+          artifacts: "artifacts/*"
           allowUpdates: true
           draft: true
           body: |
