--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(../shared 3rdParty ${ZSTD_INCLUDE_DIRS})
+include_directories(../shared ${ZSTD_INCLUDE_DIRS})
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTORCC ON)
@@ -20,11 +20,6 @@ set(SRC_MAIN main.cpp
         AvroPhonetic.cpp)
 
 set(LINK_LIBS libShared Qt5::Widgets Qt5::Network ${ZSTD_LIBRARIES})
-
-if(NOT NO_UPDATE_CHECK)
-    add_subdirectory(3rdParty)
-    list(APPEND LINK_LIBS 3rdParty)
-endif()
 
 add_executable(openbangla-gui ${SRC_MAIN} ${SRC_GUI})
 target_link_libraries(openbangla-gui ${LINK_LIBS})
