Detect Gnome and the presence of the app indicator extention to conditionally show the Hide to Tray menu item

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -17,7 +17,8 @@ set(SRC_MAIN main.cpp
         LayoutConverter.cpp
         LayoutConverter.h
         SingleInstance.cpp
-        AvroPhonetic.cpp)
+        AvroPhonetic.cpp
+        PlatformConfig.cpp)
 
 set(LINK_LIBS libShared Qt5::Widgets Qt5::Network ${ZSTD_LIBRARIES})
 
