--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,23 +11,17 @@ jobs:
     strategy:
       matrix:
         # container: [ "ubuntu:18.04", "ubuntu:20.04", "ubuntu:22.04", "ubuntu:23.04", "debian:11", "fedora:37", "fedora:38", "archlinux:latest" ]
-        container: [ "ubuntu:20.04", "ubuntu:22.04", "ubuntu:24.04", "debian:11", "debian:12", "fedora:40", "fedora:41", "opensuse/tumbleweed" ]
+        container: [ "ubuntu:22.04", "ubuntu:24.04", "debian:11", "debian:12", "fedora:40", "fedora:41", "opensuse/tumbleweed" ]
         # this list should be updated from time to time by consulting these pages:
         # https://releases.ubuntu.com/
         # https://wiki.debian.org/DebianReleases#Production_Releases
         # https://fedoraproject.org/wiki/Releases
         # https://en.wikipedia.org/wiki/OpenSUSE#Version_history
-        ime: [ "ibus", "fcitx" ]
-        # Some distributions doesn't have the required version of fcitx library, so we exclude them.
-        exclude:
-          - container: "ubuntu:20.04"
-            ime: "fcitx"
     runs-on: "ubuntu-latest"
     container:
       image: ${{ matrix.container }}
       env:
         DIST: ${{ matrix.container }}
-        IME: ${{ matrix.ime }}
         DEBIAN_FRONTEND: noninteractive
     steps:
       - name: install-git
@@ -64,7 +58,7 @@ jobs:
       - name: upload-artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: pkg-${{ steps.sanitizer.outputs.sanitized_container }}-${{ matrix.ime }}
+          name: pkg-${{ steps.sanitizer.outputs.sanitized_container }}
           path: artifact
 
   release:
