App icon and vcpkg configuration

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -27,24 +27,13 @@ if(OS_LINUX)
 endif(OS_LINUX)
 
 if(WIN32)
+    list(APPEND SRC_MAIN app.rc)
     list(APPEND LINK_LIBS zstd::libzstd)
     set(CMAKE_WIN32_EXECUTABLE ON)
 endif(WIN32)
 
 add_executable(openbangla-gui ${SRC_MAIN} ${SRC_GUI})
 target_link_libraries(openbangla-gui ${LINK_LIBS})
-
-if(WIN32)
-    get_target_property(_qmake_executable Qt5::qmake IMPORTED_LOCATION)
-    get_filename_component(_qt_bin_dir "${_qmake_executable}" DIRECTORY)
-    find_program(WINDEPLOYQT_EXECUTABLE windeployqt HINTS "${_qt_bin_dir}")
-
-    add_custom_command(TARGET openbangla-gui POST_BUILD
-    COMMAND ${WINDEPLOYQT_EXECUTABLE} $<TARGET_FILE:openbangla-gui>
-    COMMENT "Deploying Qt..."
-    VERBATIM
-    )
-endif()
 
 install(TARGETS openbangla-gui
         RUNTIME DESTINATION ${BIN_DIR})
