Implement macOS engine

--- a/.gitignore
+++ b/.gitignore
@@ -145,4 +145,12 @@ fabric.properties
 *.app
 .cache
 
-.DS_Store
+*~
+*.DS_Store
+.*.swp
+*mode1v3
+*pbxuser
+*perspectivev3
+*xcuserdata*
+*xcworkspace*
+/build
