Fix initial CPack packaging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,7 @@ if(APPLE)
     set(BIN_DIR "")
     add_definitions(-DPROJECT_DATADIR="${PROJECT_DATADIR}")
     add_definitions(-DBIN_DIR="${BIN_DIR}")
+    set(CMAKE_INSTALL_PREFIX "/")
 endif()
 
 add_subdirectory(src/engine)
@@ -172,6 +173,7 @@ elseif(APPLE)
     set(CPACK_PACKAGE_VENDOR "OpenBangla")
     set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
     set(CPACK_PACKAGE_FILE_NAME "OpenBangla-Keyboard-${PROJECT_VERSION}")
+    set(CPACK_PACKAGING_INSTALL_PREFIX "/")
 endif()
 
 include(CPack)
