CPack pkg generation

--- a/src/frontend/CMakeLists.txt
+++ b/src/frontend/CMakeLists.txt
@@ -122,5 +122,7 @@ endif()
 
 if(APPLE)
     install(TARGETS openbangla-gui
-        BUNDLE DESTINATION "Applications")
+        BUNDLE DESTINATION "Applications"
+        COMPONENT GUI
+    )
 endif()
