--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,6 +174,16 @@ elseif(APPLE)
     set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
     set(CPACK_PACKAGE_FILE_NAME "OpenBangla-Keyboard-${PROJECT_VERSION}")
     set(CPACK_PACKAGING_INSTALL_PREFIX "/")
+    set(CPACK_MONOLITHIC_INSTALL OFF)
+    set(CPACK_COMPONENTS_ALL IME GUI)
+    set(CPACK_COMPONENT_IME_REQUIRED TRUE)
+    set(CPACK_COMPONENT_GUI_REQUIRED TRUE)
+    set(CPACK_COMPONENT_UNSPECIFIED_REQUIRED "FALSE")
+    set(CPACK_PRODUCTBUILD_RESOURCES_DIR "${CMAKE_SOURCE_DIR}/data/productbuild")
+    set(CPACK_PRODUCTBUILD_BACKGROUND "installer.png")
+    set(CPACK_PRODUCTBUILD_BACKGROUND_ALIGNMENT "left")
+    set(CPACK_PRODUCTBUILD_BACKGROUND_DARKAQUA "installer.png")
+    set(CPACK_PRODUCTBUILD_BACKGROUND_DARKAQUA_ALIGNMENT "left")
 endif()
 
 include(CPack)
